# LineaBact

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md
docs/playbooks/: README.md  kmer-graph.md  rust-module.md  terminal-rescue.md  testing-benchmark.md
scripts/: convert_sra_to_fastq.sh  run_runtime_benchmark_subset.sh  select_slurm_partition.sh  submit_reference_validation_runtime_streptomyces_primary.sh  submit_reference_validation_runtime_subset.sh
src/: main.rs
src/benchmark/: mod.rs
src/cli/: mod.rs
src/frontend/: assemble.rs  backend.rs  bridging.rs  contract.rs  fixture.rs  graph.rs  mod.rs  postprocess.rs  reads.rs  report.rs
src/io/: mod.rs
