[package]
name = "lineabact"
version = "0.1.0"
edition = "2024"
description = "A short-read-first assembly front-end for bacterial isolates"

[dependencies]
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
